# markitdown2web

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.admin  Dockerfile.frontend  Dockerfile.pptx  README.md  docker-compose.yml  nginx-pptx.conf  nginx.conf  package-lock.json  pyproject.toml
admin/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admin/src/: App.tsx  main.tsx
backend/: main.py
backend/api/: deps.py
backend/config/: __init__.py  settings.py
backend/core/: security.py
backend/db/: __init__.py  init.sql  session.py
backend/middleware/: tracking_middleware.py
backend/models/: __init__.py  base.py  conversion_result.py  email_code.py  payment.py  pptx_job.py  sms_code.py  subscription.py  task.py  tracking.py  user.py
backend/schemas/: __init__.py  auth.py  common.py  conversion.py  document.py  export.py  payment.py  task.py  tracking.py  url.py  video.py
backend/services/: auth_service.py  conversion_service.py  email_service.py  export_service.py  payment_service.py  sms_service.py  task_service.py  tracking_service.py
backend/utils/: file_utils.py
client/: Dockerfile  package-lock.json  package.json
docs/: API_REFERENCE.md  DEPLOYMENT.md  PROJECT_TECH_DOC.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
pptx-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
pptx-frontend/src/: App.tsx  (+2 more)
pptx_backend/: config.py  router.py  schemas.py
server/: Dockerfile  requirements.txt
(+130 files in other folders)
