[project]
name = "everything2markdown"
version = "1.0.0"
description = "AI-powered content-to-Markdown learning notes platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiomysql>=0.2",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "markitdown[all]>=0.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openai>=1.30",
    "yt-dlp>=2024.0",
    "Pillow>=10.0",
    "python-docx>=1.1",
    "markdown>=3.6",
    "weasyprint>=62",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",
    "stripe>=8.0",
    "alibabacloud-dysmsapi20170525>=3.0",
    "twilio>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
